@@ -1,28 +1,29 @@
 --- a/etc/neutron.conf
 +++ b/etc/neutron.conf
-@@ -57,7 +57,7 @@
- # previous versions, the class name of a plugin can be specified instead of its
- # entrypoint name.
- #
--# core_plugin =
-+core_plugin = ml2
- # Example: core_plugin = ml2
+@@ -87,7 +87,7 @@
+ #web_framework = legacy
  
- # (StrOpt) Neutron IPAM (IP address management) driver to be loaded from the
-@@ -683,7 +683,7 @@
- # Use "sudo neutron-rootwrap /etc/neutron/rootwrap.conf" to use the real
- # root filter facility.
- # Change to "sudo" to skip the filtering and just run the command directly
--# root_helper = sudo
+ # The core plugin Neutron will use (string value)
+-#core_plugin = <None>
++core_plugin = ml2
+ 
+ # Range of seconds to randomly delay when starting the periodic task scheduler
+ # to reduce stampeding. (Disable by setting to 0) (integer value)
+@@ -594,7 +594,7 @@
+ # /etc/neutron/rootwrap.conf' to use the real root filter facility. Change to
+ # 'sudo' to skip the filtering and just run the command directly. (string
+ # value)
+-#root_helper = sudo
 +root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
  
- # Set to true to add comments to generated iptables rules that describe
- # each rule's purpose. (System must support the iptables comments module.)
-@@ -731,6 +731,7 @@
- # be set in the corresponding core plugin '.ini' file. However, it is suggested
- # to put the [database] section and its connection attribute in this
- # configuration file.
+ # Root helper daemon application to use when possible. (string value)
+ #root_helper_daemon = <None>
+@@ -683,7 +683,7 @@
+ # Deprecated group/name - [DEFAULT]/sql_connection
+ # Deprecated group/name - [DATABASE]/sql_connection
+ # Deprecated group/name - [sql]/connection
+-#connection = <None>
 +connection = sqlite:////var/lib/neutron/neutron.sqlite
  
- # Database engine for which script will be generated when using offline
- # migration
+ # If True, SQLite uses synchronous mode. (boolean value)
+ # Deprecated group/name - [DEFAULT]/sqlite_synchronous
