@@ -14,6 +14,7 @@ neutron (2:8.0.0~b2-0ubuntu1) UNRELEASED; urgency=medium
     configs are generated after tests are run.
   * d/p/drop-ryu-dep.patch: Rebased.
   * d/p/doc-conf-git.patch: Drop git commands that fail sphinx-build.
+  * d/p/fix-neutron-configuration.patch: Rebased.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Thu, 21 Jan 2016 16:21:10 -0500
 
